<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">DostiKarlo</string>
        <string name="facebook_app_id" translatable="false">fbId</string>
       <string name="fb_login_protocol_scheme" translatable="false">fb(fbID)</string>
       <string name="google_web_client_id" translatable="false">web_client_id_from_google_api_console</string>
    <string name="admob_appid" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="my_Interstitial_Add" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
        <string name="google_map_key" translatable="false">your_google_api_key</string>
       <string name="places_search_api" translatable="false">your_google_places_search_api_key</string>
    <string name="device" translatable="false">android</string>
    <string name="english" translatable="false">English</string>
    <string name="chat">Chat</string>
    <string name="send_message_here">Send Message Here...</string>
    <string name="enable_location">Enable location</string>
    <string name="you_ll_need_to_enable_your_location_n_in_order_to_use_binder">You\'ll need to enable your location\n in order to use Binder</string>
    <string name="allow_location">Allow Location</string>
    <string name="first_name">First Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="unlimited_rewinds">Unlimited Rewinds</string>
    <string name="free_superlike_a_day">5 Free SuperLikes A Day</string>
    <string name="unlimited_boost">Unlimited Boost</string>
    <string name="continue_txt">Continue</string>
    <string name="no_thanks">No Thanks</string>
    <string name="subscription_txt">By tapping “Continue”, your payment will be charged to your Google Play
        account, and your subscription will automatically renew for the same
        package length at the same price until you cancel it in settings in the
        Google Play store at least 24 hours prior to the end of the current period.
        By tapping “Continue”, you agree to our Privacy Policy and Terms.</string>
    <string name="recuring_billing_cancel_anytime">Recuring billing, cancel anytime.</string>
    <string name="login_description_1">Discover new and interesting\n people nearby</string>
    <string name="login_description_2">Swipe right to like someone\n or swipe left to pass</string>
    <string name="login_description_3">If they also swipe right then it\'s a match!</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone">Continue with Phone / email </string>
    <string name="we_don_t_post_anything_to_facebook">We don\'t Post anything to Facebook.</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="save_location">Save Location</string>
    <string name="introducting_binder_boost">Introducing Binder Boost</string>
    <string name="skip_the_line">Skip the Line</string>
    <string name="be_the_top_profile_in_your_area_for_30_minutes_and_get_more_watchs">Be the top profile in your area for 30 minutes and get more watchs</string>
    <string name="boost_me">Boost Me</string>
    <string name="_08_85_remaining">00:00 Remaining</string>
    <string name="you_re_being_seen_by_more_people_keep_swiping_for_the_best_results">You\'re being seen by more people.Keep swiping for the best results!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_profile_name">About</string>
    <string name="about">About You</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="gender">Gender</string>
    <string name="new_matches">New Matches</string>
    <string name="_0_likes">0 Likes</string>
    <string name="no_other_match_found_yet">No other Match Found yet.</string>
    <string name="message">Message</string>
    <string name="it_s_match">it\'s Match!</string>
    <string name="you_and_alison_likes_each_other">you and alison likes each other</string>
    <string name="send_a_message">Send a Message</string>
    <string name="settings">Settings</string>
    <string name="swiping_in">Swiping in</string>
    <string name="my_current_location">My Current Location</string>
    <string name="add_new_location">Add New Location</string>
    <string name="show_me">Show me</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="maximum_distance">Maximum Distance</string>
    <string name="mile">mile</string>
    <string name="miles">miles</string>
    <string name="age_range">Age Range</string>
    <string name="year">Year</string>
    <string name="years">Years</string>
    <string name="show_me_on_binder">Show me On Binder</string>
    <string name="don_t_show_my_age">Don\'t show my Age</string>
    <string name="make_my_distance_invisible">Make my Distance Invisible</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="your_message">Your Message</string>
    <string name="report">Report</string>
    <string name="get_the_rewind">Get the Rewind</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="delete_account_description">Delete an Account will Erase all of your data Completely</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_report_user">Are you sure to Report this user?</string>
    <string name="delete_this_message">Delete this message</string>
    <string name="unmatch_this_user">Unmatch this User</string>
    <string name="unblock_this_user">Unblock this User</string>
    <string name="block_this_user">Block and Report</string>
    <string name="block">Block</string>
    <string name="unblock">UnBlock</string>
    <string name="are_you_sure_block_user">Are you sure to block this user?</string>
    <string name="calling">Calling...</string>
    <string name="reconnecting_to">Reconnecting to</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="connected_to">Connected to</string>
    <string name="connected">Connected</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnected_from">Disconnected from</string>
    <string name="audio_connected">Audio Connected</string>
    <string name="audio_unpublished">Audio Unpublished</string>
    <string name="video_connected">Video Connected</string>
    <string name="video_unpublished">Video Unpublished</string>
    <string name="audio_subscribed">Audio Subscribed</string>
    <string name="audio_unsubscribed">Audio Unsubscribed</string>
    <string name="audio_subscription_failed">Audio Subscription Failed</string>
    <string name="video_subscribed">Video Subscribed</string>
    <string name="video_unsubscribed">Video Unsubscribed</string>
    <string name="video_subscription_failed">Video Subscription Failed</string>
    <string name="joined">" joined"</string>
    <string name="ringing">Ringing...</string>
    <string name="alert">Alert</string>
    <string name="voice_reah_limit">You have reached out of your Voice Call limit.</string>
    <string name="video_reach_limit">You have reached out of your Video Call limit.</string>
    <string name="done">Done</string>
    <string name="no_internet">No Internet. Connect to wifi or cellular network.</string>
    <string name="discovery_settings">Discovery Settings</string>
    <string name="language">Language</string>
    <string name="upgrade_to_gold_to_see_people_n_who_already_likes_you">Upgrade to Gold to see people\n Who already likes you.</string>
    <string name="no_other_users_like_your_profile_so_far_subscribe_us_and_boost_your_profile_so_more_user_can_see_you">No other users like your profile so far. Subscribe us and boost your profile so more user can see you.</string>
    <string name="see_who_likes_you">See who likes you</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="please_grant_permission">Please Grant permission</string>
    <string name="resend_code">Resend code </string>
    <string name="code_is_invalid">Code is Invalid</string>
    <string name="your_code_was_emailed_to">Your code was emailed to </string>
    <string name="login_cancel">Login Cancel</string>
    <string name="please_enter_valid_new_password">Please enter valid new password</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="login_error">Login Error</string>
    <string name="error">Error</string>
    <string name="create_password">Create password</string>
    <string name="use_characters_from_at_least_">Use 8-20 characters from at least 2 categories: letters, numbers, special characters</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="we_ll_email_you_a_code">We\'ll email you a code to reset your password.</string>
    <string name="email_address">Email address</string>
    <string name="reset">Reset</string>
    <string name="enter_4_digit_code">Enter 4\ndigit Code</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="select_country">Select Country</string>
    <string name="your_code_was_sent_to">Your code was sent to</string>
    <string name="please_Wait">Please Wait</string>
    <string name="recording">Recording...</string>
    <string name="hold_Mic_Button_to_Record">Hold Mic Button to Record</string>
    <string name="stop_Recording">Stop Recording...</string>
    <string name="for_demo_purpose">For demo purpose we only allow to </string>
    <string name="choose_from_Gallery">Choose from Gallery</string>
    <string name="tap_again">Tap again</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="are_you_sure_to_delete_this_picture">Are you sure to delete this picture ?</string>
    <string name="error_occurred">An error occurred. We\'re deeply sorry.</string>
    <string name="error_details">Error Details</string>
    <string name="restart_app">Restart app</string>
    <string name="okay">OKAY</string>
    <string name="cancel_capi">CANCEL</string>
    <string name="report_">Report :</string>
    <string name="report_description_optional">Report Description(Optional)</string>
    <string name="tell_us_why_this">Tell us why this content is being reported. All supoorting content should be relevant to the ad being reported</string>
    <string name="submit">Submit</string>
    <string name="for_audio_or_video">For Audio or Video call\nBinder needs to access your Camera and Microphone.\nPress tap Allow in next step.</string>
    <string name="camera_and_microphone_access">Camera and Microphone Access</string>
    <string name="continue_capital">CONTINUE</string>
    <string name="log_in_capital">LOG IN</string>
    <string name="skip">SKIP</string>
    <string name="my_sexual_norientation_is">My sexual\norientation is</string>
    <string name="select_up_to_3">Select up to 3</string>
    <string name="show_my_orientation_on_my_profile">Show my orientation on my profile</string>
</resources>