<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/white"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/d_bottom_gray_line">

                <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="48dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_back"
                    android:id="@+id/back_btn"
                    android:scaleType="fitStart"
                    android:background="@color/transparent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/report"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/report_reason_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/report_"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/report_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/d_bottom_gray_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/report_description_optional"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/report_description_txt"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/transparent"
                android:hint="@string/tell_us_why_this"
                android:maxLines="4"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="13sp" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/linear"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/button_rounded_background"
            android:gravity="center"
            android:windowSoftInputMode="adjustPan|adjustResize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>