<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/Goback"
                    android:layout_width="48dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_back_arrow"
                    android:scaleType="fitStart"
                    android:padding="5dp"
                    android:layout_centerVertical="true"
                    android:background="@color/transparent"/>

                <TextView
                    android:id="@+id/skip_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/skip"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/newGrayColor"
                    android:textStyle="bold"
                    />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:paddingTop="20dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_sexual_norientation_is"
                android:textSize="@dimen/_30sdp"/>

            <LinearLayout
                android:id="@+id/main_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/title"
                android:layout_above="@+id/buttonLayout"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tv_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/select_up_to_3"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/newGrayTextColor"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sexual_orien_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:id="@+id/checkLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/checkbox"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/ic_check_empty" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/show_my_orientation_on_my_profile"
                        android:textSize="@dimen/_9sdp"/>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/continueButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_google_background"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/continue_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/continue_capital"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/newGrayTextColor" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>